wallet_core/wallet_common/wallet_common_macros/tests/sentry_capture_error/fail_on_struct.stderr
error: attribute macro `sentry_capture_error` not supported here
 --> tests/sentry_capture_error/fail_on_struct.rs:4:1
  |
4 | struct Foo {}
  | ^^^^^^
