wallet_core/wallet_common/wallet_common_macros/tests/sentry_capture_error/fail_on_struct.rs
use wallet_common::error_category::handle_error_category;

#[handle_error_category]
struct Foo {}

fn main() {}
